microservices/app-milestone-frontend/k8s/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidm-app-milestone-frontend-svc
  namespace: lidm-app-milestone
spec:
  selector:
    app: lidm-app-milestone-frontend
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    protocol: TCP
